--- a/swift/wannar/Podfile
+++ b/swift/wannar/Podfile
@@ -7,20 +7,42 @@ platform :ios, '8.0'
 use_frameworks!
 
 target 'Wannar' do
-
-    pod 'Alamofire', '~> 4.0'
-    pod 'SwiftyJSON', '3.1.3'
-    pod 'SnapKit', '~> 3.0.2'
-    pod 'Spring', :git => 'https://github.com/MengTo/Spring.git', :branch => 'swift3'
+    
     pod 'LTMorphingLabel'
-    pod 'TextFieldEffects'
     pod 'StarWars', '~> 2.0'
-    pod 'Toast-Swift', '~> 2.0.0'
     pod 'RxSwift',    '~> 3.0'
     pod 'RxCocoa',    '~> 3.0'
+    
+    # 大名鼎鼎的Matta大神的网络处理框架
+    pod 'Alamofire', '~> 4.0'
+    
+    # 优雅的处理Json数据，妈妈再也不用担心我的可选类型了
+    pod 'SwiftyJSON', '3.1.3'
+    
+    # 约束
+    pod 'SnapKit', '~> 3.0.2'
+    
+    # Facebook动画框架
+    pod 'Spring', :git => 'https://github.com/MengTo/Spring.git', :branch => 'swift3'
+    
+    # 提示
+    pod 'Toast-Swift', '~> 2.0.0'
+    
+    # 各种样式的TextField,带动画
+    pod 'TextFieldEffects'
+    
+    # 键盘处理
     pod 'IQKeyboardManagerSwift'
+    
+    # 网络图片加载
     pod 'Kingfisher'
+    
+    # 优雅的屏幕幻灯片库
     pod 'FSPagerView'
+    
+    # 空列表处理
+    pod 'DZNEmptyDataSet'
+    
 #    pod 'ReactiveCocoa', '~> 5.0.0'
 
 end
