--- a/swift/wannar/Podfile
+++ b/swift/wannar/Podfile
@@ -9,20 +9,22 @@ use_frameworks!
 target 'Wannar' do
     
     pod 'LTMorphingLabel'
-    pod 'StarWars', '~> 2.0'
     pod 'RxSwift',    '~> 3.0'
     pod 'RxCocoa',    '~> 3.0'
     
-    # 大名鼎鼎的Matta大神的网络处理框架
+    # 很炫酷的转场动画效果,视图碎片化掉落
+    pod 'StarWars', '~> 2.0'
+    
+    # 大名鼎鼎的Matta大神网络处理框架
     pod 'Alamofire', '~> 4.0'
     
     # 优雅的处理Json数据，妈妈再也不用担心我的可选类型了
     pod 'SwiftyJSON', '3.1.3'
     
-    # 约束
+    # 约束,就是这么简单,但话说代码量还是比Masonry要多
     pod 'SnapKit', '~> 3.0.2'
     
-    # Facebook动画框架
+    # Facebook动画框架,再给阿三一波赞
     pod 'Spring', :git => 'https://github.com/MengTo/Spring.git', :branch => 'swift3'
     
     # 提示
@@ -31,10 +33,10 @@ target 'Wannar' do
     # 各种样式的TextField,带动画
     pod 'TextFieldEffects'
     
-    # 键盘处理
+    # 键盘处理,最省心
     pod 'IQKeyboardManagerSwift'
     
-    # 网络图片加载
+    # 网络图片加载,Swift版本的SDWebImage
     pod 'Kingfisher'
     
     # 优雅的屏幕幻灯片库
