--- a/swift/wannar/Wannar/Info.plist
+++ b/swift/wannar/Wannar/Info.plist
@@ -24,6 +24,14 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>玩哪儿想要访问您的多媒体资料</string>
+	<key>NSCameraUsageDescription</key>
+	<string>玩哪儿想要访问您的相机</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>玩哪儿想要访问您的多媒体资料</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>语音聊天服务需使用您的麦克风</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
